update icons again

--- a/px-clipboard.html
+++ b/px-clipboard.html
@@ -47,7 +47,7 @@ Custom property | Description | Default
     <div class="flex flex--left">
       <div class="flex__item"><content></content></div>
       <div class="iron">
-        <px-icon title="copy" icon="pxs:copy" id="copy"></px-icon>
+        <px-icon title="copy" icon="px-utl:copy" id="copy"></px-icon>
       </div>
     </div>
   </template>
