fix layout in IE11

--- a/demo/index.html
+++ b/demo/index.html
@@ -141,9 +141,7 @@
       },
       copyFrom: {
         type: String,
-        defaultValue: ".grabContent",
-        inputType: 'text',
-        inputDisabled: true
+        defaultValue: ".grabContent"
       },
       dataClipboardText: {
         type: String,
