--- a/px-clipboard.html
+++ b/px-clipboard.html
@@ -45,7 +45,7 @@ Custom property | Description | Default
     <style include="px-clipboard-styles"></style>
 
     <div class="flex flex--left">
-      <div class="flex__item"><content></content></div>
+      <div class="flex__item flex__item--msfix"><content></content></div>
       <div class="iron">
         <px-icon title="copy" icon="px-utl:copy" id="copy"></px-icon>
       </div>
@@ -118,7 +118,7 @@ Custom property | Description | Default
         type: Object
       },
       /**
-       * a boolean which reflects whether the "copied" text should be visible.
+       * A boolean which reflects whether the "copied" text should be visible.
        * @type {Boolean}
        * @prop _showCopiedText
        */
