runtime theming for demo

--- a/demo/px-clipboard-demo.html
+++ b/demo/px-clipboard-demo.html
@@ -14,7 +14,7 @@
 <link rel="import" href="../../px-demo/css/px-demo-styles.html" />
 
 <!-- Demo DOM module -->
-<dom-module id="local-element-demo">
+<dom-module id="px-clipboard-demo">
   <template>
     <style include="px-demo-styles" is="custom-style"></style>
 
@@ -82,7 +82,7 @@
 </dom-module>
 <script>
   Polymer({
-    is: 'local-element-demo',
+    is: 'px-clipboard-demo',
 
     properties: {
 
