--- a/test/px-clipboard-test-fixture.html
+++ b/test/px-clipboard-test-fixture.html
@@ -1,32 +1,49 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Component Test : Fixture for px-clipboard</title>
 
-    <!-- Requires Webcomponents.js polyfill is provided by the page for browsers that don't support html imports -->
-    <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-    <!-- web-component-tester automatically provides local copy of brower.js below
-         for any URL ending with "/web-component-tester/browser.js"
-         when wct is run from the command line -->
-    <script src="../web-component-tester/browser.js"></script>
-    <link rel="import" href="../px-clipboard.html" />
-    <!-- Retain this link for px-theme.html -->
-    <!-- px-theme is needed for WCT to run without errors -->
-    <link rel="import" href="../../px-theme/px-theme-styles.html">
-    <style include="px-theme-styles" is="custom-style"></style>
-    <!-- This script link will contain the generated script for basic wct test cases -->
-    <script src="px-clipboard-base-tests.js"></script>
-    <!-- This script link will contain the generated script stub for custom, developer-added test cases -->
-    <script src="px-clipboard-custom-tests.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <title>Web Component Test : Fixture for px-clipboard</title>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../mocha/mocha.js"></script>
+  <script src="../../chai/chai.js"></script>
+  <script src="../../iron-test-helpers/mock-interactions.js"></script>
 
-  <body>
-    <h3>Web Component Test : Fixture for px-clipboard</h3>
-    <px-clipboard id="px_clipboard_1"></px-clipboard>
-    <px-clipboard copy-from="#helloCopy" id="copy"><input type="text" id="helloCopy" value="hello World Copy"/></px-clipboard>
-    <px-clipboard data-clipboard-action="cut" copy-from="#helloCut" id="cut"><input type="text" id="helloCut" value="hello World Cut"/></px-clipboard>
-    <px-clipboard data-clipboard-text="Copy some text into the clipboard!" id="text"></px-clipboard>
-  </body>
+  <!-- Retain this link for px-theme.html -->
+  <!-- px-theme is needed for WCT to run without errors -->
+  <link rel="import" href="../../px-theme/px-theme-styles.html">
+  <style include="px-theme-styles" is="custom-style"></style>
+
+  <!-- Import the element to test -->
+  <link rel="import" href="../px-clipboard.html" />
+
+  <!-- This script link will contain the generated script stub for custom, developer-added test cases -->
+  <script src="px-clipboard-base-tests.js"></script>
+  <script src="px-clipboard-custom-tests.js"></script>
+</head>
+
+<body>
+  <h3>Web Component Test : Fixture for px-clipboard</h3>
+
+  <test-fixture id="pxClipboardCopy">
+    <template>
+      <px-clipboard copy-from="#helloCopy" id="copy"><input type="text" id="helloCopy" value="hello World Copy" /></px-clipboard>
+    </template>
+  </test-fixture>
+
+  <test-fixture id="pxClipboardCut">
+    <template>
+      <px-clipboard data-clipboard-action="cut" copy-from="#helloCut" id="cut"><input type="text" id="helloCut" value="hello World Cut" /></px-clipboard>
+    </template>
+  </test-fixture>
+
+  <test-fixture id="pxClipboardText">
+    <template>
+      <px-clipboard data-clipboard-text="Copy some text into the clipboard!" id="text"></px-clipboard>
+    </template>
+  </test-fixture>
+</body>
+
 </html>
