--- a/demo/px-clipboard-demo.html
+++ b/demo/px-clipboard-demo.html
@@ -92,8 +92,7 @@
        * @type {Object}
        */
       props: {
-        type: Object
-        mobile tablet desktop,
+        type: Object,
         value: function(){ return this.demoProps; }
       },
 
