--- a/demo/px-clipboard-demo.html
+++ b/demo/px-clipboard-demo.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../../px-demo/px-demo-props.html" />
 <link rel="import" href="../../px-demo/px-demo-interactive.html" />
 <link rel="import" href="../../px-demo/px-demo-component-snippet.html" />
+<link rel="import" href="../../px-demo/css/px-demo-content-helper-styles.html" />
 
 <!-- Imports for this component -->
 
@@ -16,7 +17,7 @@
 <!-- Demo DOM module -->
 <dom-module id="px-clipboard-demo">
   <template>
-
+    <style include="px-demo-content-helper-styles"></style>
     <!-- Header -->
     <px-demo-header
         module-name="px-clipboard"
