--- a/test/px-clipboard-test-fixture.html
+++ b/test/px-clipboard-test-fixture.html
@@ -22,43 +22,77 @@ limitations under the License.
     <title>Web Component Test : Fixture for px-clipboard</title>
 
     <!-- Requires Webcomponents.js polyfill is provided by the page for browsers that don't support html imports -->
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
     <!-- web-component-tester automatically provides local copy of brower.js below
          for any URL ending with "/web-component-tester/browser.js"
          when wct is run from the command line -->
-    <script src="../../web-component-tester/browser.js"></script>
-    <link rel="import" href="../px-clipboard.html" />
+    <script src="../../wct-browser-legacy/browser.js"></script>
+    <script type="module" src="../px-clipboard.js"></script>
     <!-- Retain this link for px-theme.html -->
     <!-- px-theme is needed for WCT to run without errors -->
-    <link rel="import" href="../../px-theme/px-theme-styles.html">
+    <script type="module" src="../../px-theme/px-theme-styles.js"></script>
 
-    <style include="px-theme-styles" is="custom-style"></style>
+    <!-- FIXME(polymer-modulizer):
+        These imperative modules that innerHTML your HTML are
+        a hacky way to be sure that any mixins in included style
+        modules are ready before any elements that reference them are
+        instantiated, otherwise the CSS @apply mixin polyfill won't be
+        able to expand the underlying CSS custom properties.
+        See: https://github.com/Polymer/polymer-modulizer/issues/154
+        -->
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<style include="px-theme-styles" is="custom-style"></style>`;
+document.head.appendChild($_documentContainer.content);
+</script>
     <!-- This script link will contain the generated script stub for custom, developer-added test cases -->
-    <script src="px-clipboard-custom-tests.js"></script>
+    <script src="./px-clipboard-custom-tests.js"></script>
   </head>
 
   <body>
-    <h3>Web Component Test : Fixture for px-clipboard</h3>
-    <test-fixture id="px-clipboard-fixture">
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<h3>Web Component Test : Fixture for px-clipboard</h3>`;
+document.body.appendChild($_documentContainer.content);
+</script>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<test-fixture id="px-clipboard-fixture">
       <template>
         <px-clipboard></px-clipboard>
       </template>
-    </test-fixture>
+    </test-fixture>`;
 
-    <test-fixture id="px-clipboard-copy-fixture">
+document.body.appendChild($_documentContainer.content);
+</script>
+
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<test-fixture id="px-clipboard-copy-fixture">
       <template>
         <px-clipboard copy-from="#helloCopy">
-          <input type="text" id="helloCopy" value="hello World Copy"/>
+          <input type="text" id="helloCopy" value="hello World Copy">
         </px-clipboard>
       </template>
-    </test-fixture>
+    </test-fixture>`;
 
-    <test-fixture id="px-clipboard-cut-fixture">
+document.body.appendChild($_documentContainer.content);
+</script>
+
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<test-fixture id="px-clipboard-cut-fixture">
       <template>
         <px-clipboard data-clipboard-action="cut" copy-from="#helloCut">
-          <input type="text" id="helloCut" value="hello World Cut"/>
+          <input type="text" id="helloCut" value="hello World Cut">
         </px-clipboard>
       </template>
-    </test-fixture>
+    </test-fixture>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
   </body>
 </html>
