Updated package.json and removed Bower Configuration
- Removed bower.json and .bowerrc due to bower deprecation
- Moved all dependencies to package.json for using Node Package Manager or Yarn

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ if (!webComponentsSupported) {
     <!--
       Load the Polymer library.
     -->
-    <script type="module" src="../@polymer/polymer/polymer-legacy.js"></script>
+    <script type="module" src="./node_modules/@polymer/polymer/polymer-legacy.js"></script>
 
     <!--
       Load theme files, apply default theme.
     -->
-    <script type="module" src="../px-theme/px-theme-styles.js"></script>
+    <script type="module" src="./node_modules/px-theme/px-theme-styles.js"></script>
     <!-- FIXME(polymer-modulizer):
         These imperative modules that innerHTML your HTML are
         a hacky way to be sure that any mixins in included style
